--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01-009-randompassword",
+  "name": "randompassword-frostylan",
   "version": "1.0.0",
   "description": "Password generator",
   "main": "index.js",
